src/main/java/com/example/harumeonglog/global/error/code/BaseErrorCode.java
package com.example.harumeonglog.global.error.code;

import org.springframework.http.HttpStatus;

public interface BaseErrorCode {
    HttpStatus getHttpStatus();
    String getMessage();
    String getCode();
}
